Download all IPEDS data, start coding import processes.

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,3 +5,8 @@ output: github_document
 # IPEDS Local QMER Data Administration Repository
 
 The purpose of this repository is to house the code needed to prepare IPEDS data for QMER sponsored projects using this data source.
+
+
+## TODO
+
+1. Rewrite build_dataset function to use all variables.
